--- a/src/Header.css
+++ b/src/Header.css
@@ -1,17 +1,20 @@
-
 .header {
     background-color: #131921;
     display: flex;
+    flex:1;
     align-items: center;
+    justify-content: center;
     padding:10px 0px 10px 0px;
     position:sticky;
     top:0;
     z-index: 100;
-   
- 
+    width:100%;
+    margin-left: 0px !important;
+    margin-right:0px !important;
 }
 
 .header__logo {
+    display:flex;
     width: 100px ;
     object-fit: contain;
     margin-top:0px;
@@ -25,6 +28,7 @@
     flex:1;
 }
 .header__searchInput{
+    display: flex;
     padding: 10px;
     border: none;
     width:100%;
@@ -33,6 +37,8 @@
 .header__searchIcon{
     background-color: #cd9042;
     padding:10px;
+    font-size: 1rem !important;
+    border-radius:2px solid orange;
 
 }
 
@@ -66,6 +72,13 @@
 .header__basketCount:{
     margin-left: 10px;
     margin-right: 20px;
-    font-size: 30px !important;;
-
+    font-size: 30px !important;
+    padding-left: 5px;
 }
+
+@media only screen and (max-width: 600px) {
+    .header {
+    width: max-content;
+   
+    }
+  }
